[package]
name = "util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cxx = "1.0"
autocxx = "0.17.3"
clap = { version = "3", features = ["derive"] }
thiserror = "1"

[build-dependencies]
autocxx-build = "0.17.3"
pkg-config = "0.3.24"
