[package]
name = "util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cxx = "1.0"
autocxx = { git = "https://github.com/google/autocxx" }
clap = { version = "3", features = ["derive"] }
thiserror = "1"

[build-dependencies]
autocxx-build = { git = "https://github.com/google/autocxx" }
pkg-config = "0.3.24"
